[package]
name = "dnsleaktest-tui"
version = "0.1.0"
description = "A proof-of-concept TUI for testing DNS leaks & running traceroute"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/orhun/dnsleaktest-tui"
repository = "https://github.com/orhun/dnsleaktest-tui"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
country-emoji = "0.2.0"
clap = { version = "4.5.20", features = ["derive"] }
itertools = "0.13.0"
ratatui = "0.28.1"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
trippy = { version = "0.11.0", default-features = false, features = ["core", "dns"] }
